--- a/web/info.html
+++ b/web/info.html
@@ -100,6 +100,36 @@
                 </div>
             </div>
         </div>
+        <div class="row mt-5 card-deck">
+        <div class="card" onclick="window.open('${href}')">
+            <img class="card-img-top" src="https://img9.doubanio.com/view/photo/s_ratio_poster/public/p2881176356.webp" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+            </div>
+        </div>
+
+        <div class="card" onclick="window.open('${href}')">
+            <img class="card-img-top" src="https://img9.doubanio.com/view/photo/s_ratio_poster/public/p2881176356.webp" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+            </div>
+        </div >
+
+        <div class="card" onclick="window.open('${href}')">
+            <img class="card-img-top" src="https://img9.doubanio.com/view/photo/s_ratio_poster/public/p2881176356.webp" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+            </div>
+        </div>
+
+        <div class="card" onclick="window.open('${href}')">
+            <img class="card-img-top" src="https://img9.doubanio.com/view/photo/s_ratio_poster/public/p2881176356.webp" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Card title</h4>
+            </div>
+    </div>
+
+    </div>
     </div>
 
 </body>
