--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,11 @@
     <!-- <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css' rel='stylesheet'>
+    <link href='https://use.fontawesome.com/releases/v5.3.1/css/all.css' rel='stylesheet'>
+    <link href="./style.css" rel="stylesheet">
+
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -22,6 +27,12 @@
 <body>
 <h1 class="title"> xxx 网站</h1>
 <div class="container">
+    <button class="btn btn-info btn-round" data-target="#loginModal" data-toggle="modal" type="button">
+        Login
+    </button>
+</div>
+
+<div class="container">
     <div class="col-md-8" style="
     left: 205px;
 ">
@@ -30,22 +41,80 @@
         </div>
     </div>
 </div>
-<a class="btn btn-primary btn-lg back-to-top" data-placement="left" data-toggle="tooltip" href="#" id="back-to-top"
-   role="button"
-   title="返回顶部">
-    <div id="back-to-top-gif"></div>
-</a>
+
+<!-- partial:index.partial.html -->
+特征提取
+
+<div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="loginModal" role="dialog"
+     tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header border-bottom-0">
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-title text-center">
+                    <h4>Login</h4>
+                </div>
+                <div class="d-flex flex-column text-center">
+                    <form>
+                        <div class="form-group">
+                            <input class="form-control" id="email1" placeholder="Your email address..." type="email">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" id="password1" placeholder="Your password..." type="password">
+                        </div>
+                        <button class="btn btn-info btn-block btn-round" type="button">Login</button>
+                    </form>
+
+                    <div class="text-center text-muted delimiter">or use a social network</div>
+                    <div class="d-flex justify-content-center social-buttons">
+                        <button class="btn btn-secondary btn-round" data-placement="top" data-toggle="tooltip"
+                                title="Twitter" type="button">
+                            <i class="fab fa-twitter"></i>
+                        </button>
+                        <button class="btn btn-secondary btn-round" data-placement="top" data-toggle="tooltip"
+                                title="Facebook" type="button">
+                            <i class="fab fa-facebook"></i>
+                        </button>
+                        <button class="btn btn-secondary btn-round" data-placement="top" data-toggle="tooltip"
+                                title="Linkedin" type="button">
+                            <i class="fab fa-linkedin"></i>
+                        </button>
+                        </di>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <div class="signup-section">Not a member yet? <a class="text-info" href="#a"> Sign Up</a>.</div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- partial -->
+
+
+<!--<a class="btn btn-primary btn-lg back-to-top" data-placement="left" data-toggle="tooltip" href="#" id="back-to-top" role="button"-->
+<!--   title="返回顶部">-->
+<!--    <div id="back-to-top-gif"></div>-->
+<!--</a>-->
 
 
 <div class="container" id="movieslist">
 
 </div>
+
 <div class="container" id="scrollerFooter1" style="width: 20%;height: 20%">
     <div id="load-animation"></div>
 </div>
+
 </body>
-<script>
 
+<script src='https://code.jquery.com/jquery-3.3.1.slim.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js'></script>
+<script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
+<script src="./script.js"></script>
 
-</script>
 </html>
