--- a/backend/movie-web/web/info.html
+++ b/backend/movie-web/web/info.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>电影详情</title>
     <link href="./css/emui.css" rel="stylesheet">
+    <link href="css/msgstyle.css" rel="stylesheet">
     <!-- <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -12,20 +13,61 @@
     <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js"></script>
     <script src="js/info.js"></script>
-
+    <script src="js/login.js"></script>
+    <script src="js/msg.js"></script>
+    <script src="js/search.js"></script>
     <!-- <script src="https://unpkg.com/element-ui/lib/index.js"></script> -->
     <link href="css/main.css" rel="stylesheet">
     <link href="css/sr.css" rel="stylesheet">
 </head>
 <body>
-<h1 class="title"> xxx 网站</h1>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand"><h3>电影推荐系统</h3></a>
+    <div id="login">
+        <button class="btn  btn-outline-success my-2 my-sm-0" data-target="#loginModal" data-toggle="modal"
+                type="button">
+            登录
+        </button>
+    </div>
+</nav>
+
+<div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="loginModal" role="dialog"
+     tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header border-bottom-0">
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-title text-center">
+                    <h4>登录</h4>
+                </div>
+                <div class="d-flex flex-column text-center">
+                    <form>
+                        <div class="form-group">
+                            <input class="form-control" id="username" placeholder="用户名..." type="text">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" id="password" placeholder="密码..." type="password">
+                        </div>
+                        <button class="btn btn-info btn-block btn-round" id="login-btn" type="button">登录</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="container">
     <div class="col-md-8" style="
     left: 205px;
 ">
-        <div class="search"><i class="fa fa-search"></i> <input class="form-control" placeholder="搜索电影" type="text">
-            <button class="btn btn-primary">搜索</button>
+        <div class="search"><i class="fa fa-search"></i> <input class="form-control" id="search-key" placeholder="搜索电影"
+                                                                type="text">
+            <button class="btn btn-primary" id="search-btn">搜索</button>
         </div>
     </div>
 </div>
