--- a/backend/movie-web/web/search.html
+++ b/backend/movie-web/web/search.html
@@ -14,24 +14,67 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/lottie-web/5.9.6/lottie.js"></script>
     <!--    <script src="js/index.js"></script>-->
     <script src="js/search-results.js"></script>
-
+    <script src="js/search.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/msg.js"></script>
     <script src="js/backToTop.js"></script>
     <!-- <script src="https://unpkg.com/element-ui/lib/index.js"></script> -->
     <link href="css/main.css" rel="stylesheet">
     <link href="css/sr.css" rel="stylesheet">
     <link href="css/toTop.css" rel="stylesheet">
+    <link href="css/msgstyle.css" rel="stylesheet">
 </head>
 <body>
-<h1 class="title"> xxx 网站</h1>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand"><h3>电影推荐系统</h3></a>
+    <div id="login">
+        <button class="btn  btn-outline-success my-2 my-sm-0" data-target="#loginModal" data-toggle="modal"
+                type="button">
+            登录
+        </button>
+    </div>
+</nav>
+
 <div class="container">
     <div class="col-md-8" style="
     left: 205px;
 ">
-        <div class="search"><i class="fa fa-search"></i> <input class="form-control" placeholder="搜索电影" type="text">
-            <button class="btn btn-primary">搜索</button>
+        <div class="search"><i class="fa fa-search"></i> <input class="form-control" id="search-key" placeholder="搜索电影"
+                                                                type="text">
+            <button class="btn btn-primary" id="search-btn">搜索</button>
         </div>
     </div>
 </div>
+
+<div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="loginModal" role="dialog"
+     tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header border-bottom-0">
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-title text-center">
+                    <h4>登录</h4>
+                </div>
+                <div class="d-flex flex-column text-center">
+                    <form>
+                        <div class="form-group">
+                            <input class="form-control" id="username" placeholder="用户名..." type="text">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" id="password" placeholder="密码..." type="password">
+                        </div>
+                        <button class="btn btn-info btn-block btn-round" id="login-btn" type="button">登录</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <a class="btn btn-primary btn-lg back-to-top" data-placement="left" data-toggle="tooltip" href="#" id="back-to-top"
    role="button" title="返回顶部">
